plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group 'net.ddns.crummercraft'
version '3.0.0'

targetCompatibility = JavaVersion.VERSION_17
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.dv8tion:JDA:5.0.0-beta.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
}

shadowJar {
    manifest {
        attributes('Main-Class': 'net.ddns.crummercraft.Main')
    }
    minimize()
}